<resources>
    <string name="app_name">"Rainbow Sample"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="rainbow_contact">ALL</string>
    <string name="no_result">No results</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_world">Hello world!</string>

    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="log_out">Log Out</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="online">Online</string>
    <string name="away">Away</string>
    <string name="offline">Offline</string>
    <string name="donotdist">Do not disturb</string>
    <string name="title_activity_search_by_name_contactas">SearchByNameContactasActivity</string>
    <string name="typeMessage">Enter your text here...</string>
    <string name="lbl_forget_password">forgot your password?</string>
    <string name="hint_email">e-mail address</string>
    <string name="hint_password">password</string>
    <string name="lbl_enter">enter</string>
    <string name="rainbow">Rainbow</string>
    <string name="official">Official</string>
    <string name="sandbox">Sandbox</string>
    <string name="pending">pending</string>
    <string name="addContact">Add Contact to my Network</string>
    <string name="audioCall">Audio-Call</string>
    <string name="profPhone">Professional-phone</string>
    <string name="profMobile">Professional-mobile</string>
    <string name="homeEmail">Home-Email</string>
    <string name="workEmail">Work-Email</string>
    <string name="removeContact">Remove Contact from my Network</string>
</resources>
