<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/rainbow"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/xml_edit_text_border"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/xml_edit_text_border"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/RadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        </RadioGroup>
        <Button
            android:id="@+id/btn_enter"
            style="@style/button_gray"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="25dp"
            android:text="@string/lbl_enter" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_forget_password"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>